--- a/infra/hpa.yml
+++ b/infra/hpa.yml
@@ -1,13 +1,13 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: fastfood-api-hpa
-  namespace: fastfood-app
+  name: order-hpa
+  namespace: order-app
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: fastfood-api-deployment
+    name: order-deployment
 
   minReplicas: 1
   maxReplicas: 5
