--- a/infra/service.yml
+++ b/infra/service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fastfood-api-service
-  namespace: fastfood-app
+  name: order-service
+  namespace: order-app
 spec:
   selector:
-    app: fastfood-api
+    app: order
   ports:
     - protocol: TCP
       port: 8080
