feat: add products-api url

--- a/app-order/src/main/resources/application.properties
+++ b/app-order/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Product-api client
-external.products-api.url: http://localhost:8081
+external.products-api.url: https://gie9axkpa3.execute-api.us-east-1.amazonaws.com/v1/products
