--- a/infra/ingress.yaml
+++ b/infra/ingress.yaml
@@ -4,14 +4,14 @@ metadata:
   name: order-ingress
   namespace: order-app
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    # Rewrite removido
 spec:
   ingressClassName: nginx
   rules:
   - http:
       paths:
-      - path: /order(/|$)(.*)
-        pathType: ImplementationSpecific
+      - path: /orders
+        pathType: Prefix
         backend:  
           service:
             name: order-service
